// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should analyze absolute-import-path 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "details": "got 2 errors:
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/asset/image/1659821.jpeg - Failed to load resource: the server responded with a status of 404 (Not Found)
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/asset/script.js - Failed to load resource: the server responded with a status of 404 (Not Found)",
      "result": "failed",
    },
    "game_no_external_http": Object {
      "details": "got 2 forbidden requests:
- /asset/image/1659821.jpeg Can you try importing this resource with a relative path ?
- /asset/script.js Can you try importing this resource with a relative path ?",
      "result": "failed",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/b2ed77c919951cd7c6be1eebec67ba70/index.html",
}
`;

exports[`should analyze blank-screen 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "failed",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/6dd4e6691e2ead04a88ee4dc99a9ed99/index.html",
}
`;

exports[`should analyze error-on-run 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "details": "got 1 errors:
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/b3107c5e2f9240efdff74a17a6e5ef0b/asset/script.js 7:10 Uncaught Error: something bad",
      "result": "failed",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/b3107c5e2f9240efdff74a17a6e5ef0b/index.html",
}
`;

exports[`should analyze external-http-call-html 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "details": "got 2 forbidden requests:
- https://avatars0.githubusercontent.com/u/1659820?v=4
- https://github.com/platane.png",
      "result": "failed",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/c0d13b09ee4ae30c8938235cbbb7ae2e/index.html",
}
`;

exports[`should analyze index-not-in-root 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "details": "Can you try moving \\"game/index.html\\" to the root of the zip ?",
      "result": "failed",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "untested",
    },
    "game_no_error": Object {
      "result": "untested",
    },
    "game_no_external_http": Object {
      "result": "untested",
    },
  },
  "deployUrl": null,
}
`;

exports[`should analyze missing-index 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "details": "Can you try renaming \\"game.html\\" to \\"index.html\\" ?",
      "result": "failed",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "untested",
    },
    "game_no_error": Object {
      "result": "untested",
    },
    "game_no_external_http": Object {
      "result": "untested",
    },
  },
  "deployUrl": null,
}
`;

exports[`should analyze oversize-bundle 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "failed",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/8007d43b7ccd9e60484608a3d6be6b19/index.html",
}
`;

exports[`should analyze valid 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/cec73ecd46375ab7c64a85c8a4d2c172/index.html",
}
`;

exports[`should analyze valid-whitelisted-external 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/7edd45b6ad71be8feb0ff6a43a13a0f8/index.html",
}
`;
